platform/jitsi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi
  namespace: jitsi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: platform-gateway
      sectionName: https
  hostnames:
    - jitsi.hacwa.co.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jitsi-web
          port: 80
          weight: 1
